{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 62,
  "lineage": "2c22c920-d3fa-2345-d3da-e3316ef641ad",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ansible",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/eb13a6f7-e15d-45f5-b77a-7b1102ce68b9/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkInterfaces/NIC-ansible",
            "internal_domain_name_suffix": "xstz5imlj2aephtuvmt3ocospg.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/eb13a6f7-e15d-45f5-b77a-7b1102ce68b9/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/Terraform-VNet/subnets/Subnet-01"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "francecentral",
            "name": "NIC-ansible",
            "private_ip_address": "10.1.1.5",
            "private_ip_addresses": [
              "10.1.1.5"
            ],
            "resource_group_name": "Terraform-RG"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "jenkins-master",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/eb13a6f7-e15d-45f5-b77a-7b1102ce68b9/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkInterfaces/NIC-jenkins-master",
            "internal_domain_name_suffix": "xstz5imlj2aephtuvmt3ocospg.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/eb13a6f7-e15d-45f5-b77a-7b1102ce68b9/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/Terraform-VNet/subnets/Subnet-01"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "francecentral",
            "name": "NIC-jenkins-master",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "Terraform-RG"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "jenkins-slave",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/eb13a6f7-e15d-45f5-b77a-7b1102ce68b9/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkInterfaces/NIC-jenkins-slave",
            "internal_domain_name_suffix": "xstz5imlj2aephtuvmt3ocospg.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/eb13a6f7-e15d-45f5-b77a-7b1102ce68b9/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/Terraform-VNet/subnets/Subnet-01"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "francecentral",
            "name": "NIC-jenkins-slave",
            "private_ip_address": "10.1.1.6",
            "private_ip_addresses": [
              "10.1.1.6"
            ],
            "resource_group_name": "Terraform-RG"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eb13a6f7-e15d-45f5-b77a-7b1102ce68b9/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkSecurityGroups/Terraform-NSG",
            "location": "francecentral",
            "name": "Terraform-NSG",
            "resource_group_name": "Terraform-RG",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/eb13a6f7-e15d-45f5-b77a-7b1102ce68b9/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkSecurityGroups/Terraform-NSG/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "Terraform-NSG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Terraform-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/eb13a6f7-e15d-45f5-b77a-7b1102ce68b9/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/Terraform-VNet/subnets/Subnet-01",
            "name": "Subnet-01",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Terraform-RG",
            "virtual_network_name": "Terraform-VNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/eb13a6f7-e15d-45f5-b77a-7b1102ce68b9/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/Terraform-VNet/subnets/Subnet-02",
            "name": "Subnet-02",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Terraform-RG",
            "virtual_network_name": "Terraform-VNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a19fa7bc-4f8b-4700-9e74-ab27d709d27e",
            "id": "/subscriptions/eb13a6f7-e15d-45f5-b77a-7b1102ce68b9/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/Terraform-VNet",
            "location": "francecentral",
            "name": "Terraform-VNet",
            "resource_group_name": "Terraform-RG"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}